tests/sksl/errors/InvalidToken.dsl.glsl
### Compilation failed:

error: invalid token
1 error
